add docker starup (#195)
* add docker starup

* fix license header

* fix typo, worker should wait for controller startup first

* update script and license header